--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i" rel="stylesheet">
 </head>
 <body>
-  <!--Starnight App-->
+  <main>
+    <h1>Starnight App</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+    <a href="#" id="play"><img src="img/play.png" alt=""></a>
+    <a href="#" id="getStarted">Get Started</a>
+  </main>
   
-  <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation-->
 
-  <!--Get Started-->
+ 
 
   <!--See the sky even better than your own eyes can-->
   
