--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
   <title>Starnight</title>
   
   <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <main>
     <h1>Starnight App</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
-    <a href="#" id="play"><img src="img/play.png" alt=""></a>
-    <a href="#" id="getStarted">Get Started</a>
+    <a href="#">
+      <img src="img/play.png" alt="">
+    </a>
+    <footer>
+    <a href="#" class="button">Get Started</a>
+    </footer> 
   </main>
   
 
