--- a/index.html
+++ b/index.html
@@ -19,21 +19,22 @@
       <img src="img/play.png" alt="">
     </a>
     <footer>
-    <a href="#" class="button">Get Started</a>
+    <a href="#intro" class="button">Get Started</a>
     </footer> 
   </main>
   
+  <section id="intro">
+    <div>
+      <article>
+        <h2>See the sky even better than your own eyes can</h2>
+        <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Auae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+        <a href="#" class="button">Download Now</a>
+      </article>
+    </div>
+  </section>
 
  
-
-  <!--See the sky even better than your own eyes can-->
-  
-  <!--Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.-->
-
-  <!--Auae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.-->
-
-  <!--Download Now-->
-
   <!--I couldn't possibly use my own eyes to look at the stars, thanks Starnight Apps 1-->
 
   <!--So Dreamy-->
